--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,8 +59,13 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+    implementation "androidx.navigation:navigation-compose:2.5.0"
+    implementation "com.google.android.material:compose-theme-adapter:1.1.14"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
     implementation 'androidx.activity:activity-compose:1.5.0'
+    implementation "com.github.skydoves:landscapist-coil:1.5.2"
 
     //Hilt
     implementation 'com.google.dagger:hilt-android:2.42'
