--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,8 +69,12 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.5.0'
     implementation "com.github.skydoves:landscapist-coil:1.5.2"
 
+    //Translate
+    implementation 'com.google.mlkit:translate:17.0.0'
+    
     //Hilt
     implementation 'com.google.dagger:hilt-android:2.42'
+    implementation 'com.google.android.material:material:1.6.1'
     kapt 'com.google.dagger:hilt-compiler:2.42'
 
     //Moshi
@@ -81,7 +85,7 @@ dependencies {
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
-    implementation 'com.squareup.okhttp3:khttp:5.0.0-alpha.5'
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.5'
 
     //Work
     implementation "androidx.work:work-runtime-ktx:2.7.1"
