--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,9 +12,11 @@ android {
         applicationId "com.globalhiddenodds.apicday"
         minSdk 28
         targetSdk 32
-        versionCode 1
-        versionName "1.0"
-
+        versionCode 10
+        versionName "10.0"
+        ndk {
+            debugSymbolLevel 'symbol_table'
+        }
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
@@ -22,6 +24,9 @@ android {
     }
 
     buildTypes {
+        debug {
+            minifyEnabled false
+        }
         release {
             minifyEnabled true
             shrinkResources true
@@ -51,6 +56,8 @@ android {
         //enableExperimentalClasspathAggregation = true
         enableAggregatingTask = true
     }
+    ndkVersion '25.0.8775105'
+    buildToolsVersion '31.0.0'
 }
 
 dependencies {
@@ -68,14 +75,17 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
     implementation 'androidx.activity:activity-compose:1.5.0'
     implementation "com.github.skydoves:landscapist-coil:1.5.2"
+    //implementation 'org.conscrypt:conscrypt-android:2.5.2'
 
     //Translate
     implementation 'com.google.mlkit:translate:17.0.0'
     
     //Hilt
     implementation 'com.google.dagger:hilt-android:2.42'
+    implementation 'androidx.hilt:hilt-work:1.0.0'
     implementation 'com.google.android.material:material:1.6.1'
     kapt 'com.google.dagger:hilt-compiler:2.42'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
 
     //Moshi
     implementation 'com.squareup.moshi:moshi:1.12.0'
@@ -86,6 +96,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.5'
+    implementation  "com.squareup.okhttp3:logging-interceptor:4.9.0"
 
     //Work
     implementation "androidx.work:work-runtime-ktx:2.7.1"
@@ -104,6 +115,19 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.0'
 
+    //Video player
+    //implementation 'com.google.android.exoplayer:exoplayer:2.18.1'
+    //implementation 'com.google.android.exoplayer:exoplayer-core:2.18.1'
+    //implementation 'com.google.android.exoplayer:exoplayer-common:2.18.1'
+    //implementation 'com.google.android.exoplayer:exoplayer-datasource:2.18.1'
+    implementation 'androidx.media3:media3-exoplayer:1.0.0-beta02'
+    implementation 'androidx.media3:media3-ui:1.0.0-beta02'
+    implementation 'androidx.media3:media3-exoplayer-dash:1.0.0-beta02'
+    implementation 'androidx.media3:media3-extractor:1.0.0-beta02'
+
+    //implementation files('libs/YouTubeAndroidPlayerApi.jar')
+
+    //Test
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
