--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,17 +6,18 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        rel {
+        }
+    }
     compileSdk 32
 
     defaultConfig {
         applicationId "com.globalhiddenodds.apicday"
         minSdk 28
         targetSdk 32
-        versionCode 10
-        versionName "10.0"
-        ndk {
-            debugSymbolLevel 'symbol_table'
-        }
+        versionCode 15
+        versionName "15.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
@@ -25,20 +26,24 @@ android {
 
     buildTypes {
         debug {
+            debuggable true
             minifyEnabled false
         }
-        release {
+        getByName("release") {
+            debuggable false
             minifyEnabled true
-            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            ndk {
+                debugSymbolLevel 'symbol_table'
+            }
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
     buildFeatures {
         compose true
@@ -53,7 +58,6 @@ android {
     }
 
     hilt {
-        //enableExperimentalClasspathAggregation = true
         enableAggregatingTask = true
     }
     ndkVersion '25.0.8775105'
@@ -61,7 +65,9 @@ android {
 }
 
 dependencies {
-
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-common:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
@@ -69,18 +75,16 @@ dependencies {
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation "androidx.compose.runtime:runtime:$compose_version"
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
-    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
     implementation "androidx.navigation:navigation-compose:2.5.0"
     implementation "com.google.android.material:compose-theme-adapter:1.1.14"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
     implementation 'androidx.activity:activity-compose:1.5.0'
     implementation "com.github.skydoves:landscapist-coil:1.5.2"
-    //implementation 'org.conscrypt:conscrypt-android:2.5.2'
 
     //Translate
-    implementation 'com.google.mlkit:translate:17.0.0'
-    
+    implementation 'com.google.mlkit:translate:17.0.1'
+
     //Hilt
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
     implementation 'com.google.dagger:hilt-android:2.42'
     implementation 'androidx.hilt:hilt-work:1.0.0'
     implementation 'com.google.android.material:material:1.6.1'
@@ -96,7 +100,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.5'
-    implementation  "com.squareup.okhttp3:logging-interceptor:4.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
 
     //Work
     implementation "androidx.work:work-runtime-ktx:2.7.1"
@@ -120,10 +124,10 @@ dependencies {
     //implementation 'com.google.android.exoplayer:exoplayer-core:2.18.1'
     //implementation 'com.google.android.exoplayer:exoplayer-common:2.18.1'
     //implementation 'com.google.android.exoplayer:exoplayer-datasource:2.18.1'
-    implementation 'androidx.media3:media3-exoplayer:1.0.0-beta02'
-    implementation 'androidx.media3:media3-ui:1.0.0-beta02'
-    implementation 'androidx.media3:media3-exoplayer-dash:1.0.0-beta02'
-    implementation 'androidx.media3:media3-extractor:1.0.0-beta02'
+//    implementation 'androidx.media3:media3-exoplayer:1.0.0-beta02'
+//    implementation 'androidx.media3:media3-ui:1.0.0-beta02'
+//    implementation 'androidx.media3:media3-exoplayer-dash:1.0.0-beta02'
+//    implementation 'androidx.media3:media3-extractor:1.0.0-beta02'
 
     //implementation files('libs/YouTubeAndroidPlayerApi.jar')
 
