--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,14 @@
 buildscript {
     ext {
-        compose_version = '1.2.0-beta01'
+        compose_version = '1.2.0'
+        kotlin_version = '1.7.0'
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.42"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
@@ -16,8 +17,6 @@ plugins {
     id 'com.android.application' version '7.2.0' apply false
     id 'com.android.library' version '7.2.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.5.31' apply false
-    //id "org.jetbrains.kotlin.kapt" version "1.7.10"
-    //id 'com.google.dagger.hilt.android' version '2.42' apply false
 }
 
 task clean(type: Delete) {
