Refactory all application

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,12 @@ android {
         rel {
         }
     }
-    compileSdk 32
+    compileSdkVersion 32
 
     defaultConfig {
         applicationId "com.globalhiddenodds.apicday"
         minSdk 28
-        targetSdk 32
+        targetSdkVersion 32
         versionCode 15
         versionName "15.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -25,13 +25,8 @@ android {
     }
 
     buildTypes {
-        debug {
-            debuggable true
-            minifyEnabled false
-        }
         getByName("release") {
-            debuggable false
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             ndk {
                 debugSymbolLevel 'symbol_table'
@@ -43,13 +38,14 @@ android {
         targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '11'
+        jvmTarget = JavaVersion.VERSION_11.toString()
+        freeCompilerArgs = ["-Xallow-result-return-type"]
     }
     buildFeatures {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion composeCompiler_version
     }
     packagingOptions {
         resources {
@@ -61,63 +57,56 @@ android {
         enableAggregatingTask = true
     }
     ndkVersion '25.0.8775105'
-    buildToolsVersion '31.0.0'
+    buildToolsVersion '33.0.0'
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-common:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
-    implementation "androidx.compose.runtime:runtime:$compose_version"
-    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
-    implementation "androidx.navigation:navigation-compose:2.5.0"
-    implementation "com.google.android.material:compose-theme-adapter:1.1.14"
-    implementation 'androidx.activity:activity-compose:1.5.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.activity:activity-compose:1.5.1'
+    implementation "androidx.navigation:navigation-compose:2.5.2"
+
+    //Coil Tooltip
     implementation "com.github.skydoves:landscapist-coil:1.5.2"
+    implementation 'dev.patrickgold.compose.tooltip:tooltip:0.1.0'
 
     //Translate
     implementation 'com.google.mlkit:translate:17.0.1'
 
     //Hilt
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
-    implementation 'com.google.dagger:hilt-android:2.42'
-    implementation 'androidx.hilt:hilt-work:1.0.0'
-    implementation 'com.google.android.material:material:1.6.1'
-    kapt 'com.google.dagger:hilt-compiler:2.42'
-    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+    implementation 'com.google.dagger:hilt-android:2.43'
+    kapt 'com.google.dagger:hilt-android-compiler:2.43'
 
     //Moshi
-    implementation 'com.squareup.moshi:moshi:1.12.0'
-    implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
-    implementation 'com.squareup.moshi:moshi-kotlin-codegen:1.12.0'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.13.0'
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
-    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.5'
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
-
-    //Work
-    implementation "androidx.work:work-runtime-ktx:2.7.1"
 
     //Room
-    implementation 'androidx.room:room-runtime:2.4.2'
+    implementation 'androidx.room:room-runtime:2.4.3'
+    implementation 'androidx.room:room-ktx:2.4.3'
     implementation 'androidx.annotation:annotation:1.4.0'
-    kapt "androidx.room:room-compiler:2.4.2"
-    implementation "androidx.room:room-ktx:2.4.2"
+    kapt "androidx.room:room-compiler:2.4.3"
 
     //Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 
     //Lifecycle
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
 
     //Video player
     //implementation 'com.google.android.exoplayer:exoplayer:2.18.1'
