--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,11 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        tools:ignore="ScopedStorage" />
 
     <application
         android:name=".APicDayApplication"
         android:allowBackup="true"
+        android:largeHeap="true"
         android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:requestLegacyExternalStorage="true"
@@ -23,9 +21,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.APicDay"
         tools:targetApi="31"
-        tools:ignore="RtlEnabled">
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name=".ui.activities.MainActivity"
+            android:name=".overview.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.APicDay">
             <intent-filter>
